--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch --env-file=.env ./src/server.js",
-    "start": "node server.js"
+    "build": "echo \"No build step required for Node.js\"",
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
